[gd_scene load_steps=27 format=3 uid="uid://cq4din5ngeiac"]

[ext_resource type="Shader" path="res://data/shader/shadow.gdshader" id="1_e1bys"]
[ext_resource type="Texture2D" uid="uid://dcpy4lfshwsvi" path="res://assets/funny_sheet.png" id="1_w4bna"]
[ext_resource type="Script" path="res://data/menu.gd" id="2_m1ay0"]
[ext_resource type="TileSet" uid="uid://kbojo77rnagg" path="res://data/game/world_tiles.tres" id="3_4fw5l"]
[ext_resource type="FontFile" uid="uid://kescdl61q27c" path="res://assets/font/medium.otf" id="3_kl6pf"]
[ext_resource type="Texture2D" uid="uid://da375snxlg3er" path="res://assets/alpha.png" id="5_a3ujg"]
[ext_resource type="AudioStream" uid="uid://cx006xtw4ypfe" path="res://assets/sfx/ui_click.wav" id="7_xew1m"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0i4fk"]
shader = ExtResource("1_e1bys")
shader_parameter/radius = 1.0
shader_parameter/modulate = Color(0, 0, 0, 0.498039)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y05xk"]
shader = ExtResource("1_e1bys")
shader_parameter/radius = 2.0
shader_parameter/modulate = Color(0, 0, 0, 0.498039)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eakg"]
atlas = ExtResource("1_w4bna")
region = Rect2(0, 0, 284, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2435"]
atlas = ExtResource("1_w4bna")
region = Rect2(0, 46, 284, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_rf7af"]
atlas = ExtResource("1_w4bna")
region = Rect2(0, 92, 284, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_smon8"]
atlas = ExtResource("1_w4bna")
region = Rect2(0, 138, 284, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmydj"]
atlas = ExtResource("1_w4bna")
region = Rect2(0, 184, 284, 46)

[sub_resource type="SpriteFrames" id="SpriteFrames_078qx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eakg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2435")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rf7af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smon8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmydj")
}],
"loop": true,
"name": &"default",
"speed": 24.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_flx6v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j5f2i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pqiwe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vaaa5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_se3oe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ux6d7"]
bg_color = Color(0, 0, 0, 0.247059)
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xdiry"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jndn3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_047b6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1epdt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4vjks"]

[node name="Menu" type="Node2D"]
material = SubResource("ShaderMaterial_0i4fk")
script = ExtResource("2_m1ay0")

[node name="TileMap" type="TileMap" parent="."]
modulate = Color(0.498039, 0.498039, 0.498039, 1)
z_index = -1
y_sort_enabled = true
tile_set = ExtResource("3_4fw5l")
format = 2
layer_0/name = "Terrain"
layer_0/tile_data = PackedInt32Array(0, 0, 1, 65536, 0, 1, 131072, 0, 1, 196608, 0, 1, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 1, 524288, 0, 2, 589824, 0, 3, 655360, 0, 3, 720896, 0, 3, 786432, 0, 4, 851968, 0, 4, 917504, 0, 4, 983040, 0, 4, 1048576, 0, 4, 1, 0, 2, 2, 0, 3, 3, 0, 4, 4, 0, 4, 5, 0, 4, 6, 0, 4, 7, 0, 4, 8, 0, 4, 9, 0, 3, 10, 0, 3, 11, 0, 2, 12, 0, 1, 13, 0, 1, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 1, 25, 0, 1, 26, 0, 1, 27, 0, 2, 28, 0, 2, 29, 0, 2, 65537, 0, 2, 131073, 0, 2, 196609, 0, 1, 262145, 0, 1, 327681, 0, 0, 393217, 0, 0, 458753, 0, 1, 524289, 0, 2, 589825, 0, 3, 655361, 0, 3, 720897, 0, 3, 786433, 0, 4, 851969, 0, 4, 917505, 0, 4, 983041, 0, 4, 1048577, 0, 3, 65538, 0, 3, 131074, 0, 3, 196610, 0, 2, 262146, 0, 1, 327682, 0, 0, 393218, 0, 0, 458754, 0, 1, 524290, 0, 1, 589826, 0, 2, 655362, 0, 2, 720898, 0, 3, 786434, 0, 3, 851970, 0, 3, 917506, 0, 3, 983042, 0, 3, 1048578, 0, 3, 65539, 0, 4, 131075, 0, 3, 196611, 0, 2, 262147, 0, 1, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 0, 1, 655363, 0, 2, 720899, 0, 2, 786435, 0, 2, 851971, 0, 3, 917507, 0, 3, 983043, 0, 3, 1048579, 0, 2, 65540, 0, 4, 131076, 0, 3, 196612, 0, 2, 262148, 0, 1, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 589828, 0, 1, 655364, 0, 1, 720900, 0, 1, 786436, 0, 1, 851972, 0, 2, 917508, 0, 2, 983044, 0, 2, 1048580, 0, 1, 65541, 0, 4, 131077, 0, 3, 196613, 0, 2, 262149, 0, 1, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 589829, 0, 0, 655365, 0, 0, 720901, 0, 0, 786437, 0, 1, 851973, 0, 1, 917509, 0, 1, 983045, 0, 1, 1048581, 0, 1, 65542, 0, 4, 131078, 0, 3, 196614, 0, 2, 262150, 0, 1, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 589830, 0, 0, 655366, 0, 0, 720902, 0, 0, 786438, 0, 0, 851974, 0, 0, 917510, 0, 0, 983046, 0, 0, 1048582, 0, 0, 65543, 0, 3, 131079, 0, 3, 196615, 0, 2, 262151, 0, 1, 327687, 0, 1, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 589831, 0, 0, 655367, 0, 0, 720903, 0, 0, 786439, 0, 0, 851975, 0, 0, 917511, 0, 0, 983047, 0, 0, 1048583, 0, 0, 65544, 0, 3, 131080, 0, 3, 196616, 0, 2, 262152, 0, 1, 327688, 0, 1, 393224, 0, 1, 458760, 0, 0, 524296, 0, 0, 589832, 0, 0, 655368, 0, 0, 720904, 0, 0, 786440, 0, 0, 851976, 0, 0, 917512, 0, 0, 983048, 0, 0, 1048584, 0, 0, 65545, 0, 3, 131081, 0, 2, 196617, 0, 2, 1048585, 0, 0, 65546, 0, 2, 131082, 0, 2, 196618, 0, 2, 1048586, 0, 0, 65547, 0, 1, 131083, 0, 2, 196619, 0, 2, 1048587, 0, 0, 65548, 0, 1, 131084, 0, 1, 196620, 0, 1, 1048588, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 0, 1, 1048589, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 1048590, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 1048591, 0, 0, 65552, 0, 0, 131088, 0, 0, 196624, 0, 0, 1048592, 0, 0, 65553, 0, 0, 131089, 0, 0, 196625, 0, 0, 1048593, 0, 0, 65554, 0, 0, 131090, 0, 0, 196626, 0, 0, 1048594, 0, 0, 65555, 0, 0, 131091, 0, 0, 196627, 0, 0, 1048595, 0, 0, 65556, 0, 0, 131092, 0, 0, 196628, 0, 0, 1048596, 0, 0, 65557, 0, 0, 131093, 0, 0, 196629, 0, 0, 1048597, 0, 0, 65558, 0, 0, 131094, 0, 0, 196630, 0, 0, 1048598, 0, 0, 65559, 0, 0, 131095, 0, 0, 196631, 0, 0, 262167, 0, 1, 327703, 0, 1, 393239, 0, 1, 458775, 0, 1, 524311, 0, 2, 589847, 0, 2, 655383, 0, 1, 720919, 0, 1, 786455, 0, 0, 851991, 0, 0, 917527, 0, 0, 983063, 0, 0, 1048599, 0, 0, 65560, 0, 0, 131096, 0, 0, 196632, 0, 0, 262168, 0, 1, 327704, 0, 1, 393240, 0, 1, 458776, 0, 2, 524312, 0, 2, 589848, 0, 3, 655384, 0, 2, 720920, 0, 1, 786456, 0, 0, 851992, 0, 0, 917528, 0, 0, 983064, 0, 0, 1048600, 0, 0, 65561, 0, 0, 131097, 0, 1, 196633, 0, 1, 262169, 0, 1, 327705, 0, 1, 393241, 0, 2, 458777, 0, 2, 524313, 0, 3, 589849, 0, 3, 655385, 0, 2, 720921, 0, 1, 786457, 0, 1, 851993, 0, 1, 917529, 0, 0, 983065, 0, 0, 1048601, 0, 0, 65562, 0, 1, 131098, 0, 1, 196634, 0, 1, 262170, 0, 1, 327706, 0, 2, 393242, 0, 3, 458778, 0, 3, 524314, 0, 3, 589850, 0, 3, 655386, 0, 3, 720922, 0, 2, 786458, 0, 2, 851994, 0, 1, 917530, 0, 1, 983066, 0, 0, 1048602, 0, 0, 65563, 0, 1, 131099, 0, 1, 196635, 0, 2, 262171, 0, 2, 327707, 0, 3, 393243, 0, 3, 458779, 0, 4, 524315, 0, 4, 589851, 0, 4, 655387, 0, 3, 720923, 0, 3, 786459, 0, 3, 851995, 0, 2, 917531, 0, 1, 983067, 0, 0, 1048603, 0, 0, 65564, 0, 2, 131100, 0, 1, 196636, 0, 2, 262172, 0, 3, 327708, 0, 3, 393244, 0, 4, 458780, 0, 4, 524316, 0, 4, 589852, 0, 4, 655388, 0, 4, 720924, 0, 4, 786460, 0, 3, 851996, 0, 2, 917532, 0, 1, 983068, 0, 0, 1048604, 0, 0, 65565, 0, 2, 131101, 0, 2, 196637, 0, 2, 262173, 0, 3, 327709, 0, 3, 393245, 0, 4, 458781, 0, 4, 524317, 0, 4, 589853, 0, 4, 655389, 0, 4, 720925, 0, 4, 786461, 0, 3, 851997, 0, 2, 917533, 0, 1, 983069, 0, 0, 1048605, 0, 0, 262154, 0, 2, 327690, 0, 2, 393226, 0, 2, 458762, 0, 2, 524298, 0, 2, 589834, 0, 2, 655370, 0, 1, 720906, 0, 1, 786442, 0, 1, 851978, 0, 1, 917514, 0, 0, 983050, 0, 0, 262155, 0, 2, 327691, 0, 2, 393227, 0, 3, 458763, 0, 3, 524299, 0, 3, 589835, 0, 3, 655371, 0, 2, 720907, 0, 2, 786443, 0, 2, 851979, 0, 1, 917515, 0, 1, 983051, 0, 0, 262156, 0, 1, 327692, 0, 2, 393228, 0, 3, 458764, 0, 3, 524300, 0, 3, 589836, 0, 3, 655372, 0, 3, 720908, 0, 3, 786444, 0, 3, 851980, 0, 2, 917516, 0, 1, 983052, 0, 0, 262157, 0, 1, 327693, 0, 2, 393229, 0, 3, 458765, 0, 3, 524301, 0, 3, 589837, 0, 3, 655373, 0, 3, 720909, 0, 3, 786445, 0, 3, 851981, 0, 2, 917517, 0, 1, 983053, 0, 0, 262158, 0, 1, 327694, 0, 2, 393230, 0, 3, 458766, 0, 3, 524302, 0, 3, 589838, 0, 3, 655374, 0, 3, 720910, 0, 3, 786446, 0, 3, 851982, 0, 2, 917518, 0, 1, 983054, 0, 0, 262159, 0, 1, 327695, 0, 2, 393231, 0, 3, 458767, 0, 3, 524303, 0, 3, 589839, 0, 3, 655375, 0, 3, 720911, 0, 3, 786447, 0, 3, 851983, 0, 2, 917519, 0, 1, 983055, 0, 0, 262153, 0, 2, 327689, 0, 2, 393225, 0, 1, 458761, 0, 1, 524297, 0, 1, 589833, 0, 1, 655369, 0, 1, 720905, 0, 0, 786441, 0, 0, 851977, 0, 0, 917513, 0, 0, 983049, 0, 0, 262166, 0, 0, 327702, 0, 1, 393238, 0, 1, 458774, 0, 1, 524310, 0, 1, 589846, 0, 1, 655382, 0, 1, 720918, 0, 0, 786454, 0, 0, 851990, 0, 0, 917526, 0, 0, 983062, 0, 0, 393232, 0, 3, 458768, 0, 3, 524304, 0, 3, 589840, 0, 3, 655376, 0, 3, 720912, 0, 3, 786448, 0, 3, 393233, 0, 3, 458769, 0, 3, 524305, 0, 3, 589841, 0, 3, 655377, 0, 3, 720913, 0, 3, 786449, 0, 3, 393234, 0, 3, 458770, 0, 3, 524306, 0, 3, 589842, 0, 3, 655378, 0, 3, 720914, 0, 3, 786450, 0, 2, 851984, 0, 2, 851985, 0, 2, 851986, 0, 2, 851987, 0, 1, 327696, 0, 2, 327697, 0, 2, 327698, 0, 2, 327699, 0, 1, 393235, 0, 2, 458771, 0, 2, 524307, 0, 2, 589843, 0, 2, 655379, 0, 2, 720915, 0, 2, 786451, 0, 1, 262160, 0, 1, 917520, 0, 1, 983056, 0, 0, 262161, 0, 1, 917521, 0, 1, 983057, 0, 0, 262162, 0, 1, 917522, 0, 1, 983058, 0, 0, 262163, 0, 1, 917523, 0, 1, 983059, 0, 0, 262164, 0, 0, 327700, 0, 1, 393236, 0, 1, 458772, 0, 1, 524308, 0, 1, 589844, 0, 1, 655380, 0, 1, 720916, 0, 1, 786452, 0, 1, 851988, 0, 0, 917524, 0, 0, 983060, 0, 0, 262165, 0, 0, 327701, 0, 0, 393237, 0, 1, 458773, 0, 1, 524309, 0, 1, 589845, 0, 1, 655381, 0, 1, 720917, 0, 0, 786453, 0, 0, 851989, 0, 0, 917525, 0, 0, 983061, 0, 0, 65568, 0, 0, 131104, 0, 0, 196640, 0, 0, 262176, 0, 0, 327712, 0, 0, 327711, 0, 0, 327713, 0, 0, 65567, 0, 0, 65569, 0, 0, 65571, 0, 0, 65572, 0, 0, 65573, 0, 0, 131108, 0, 0, 196644, 0, 0, 262180, 0, 0, 327716, 0, 0, 65579, 0, 3, 131115, 0, 3, 196651, 0, 3, 262187, 0, 3, 327723, 0, 3, 196652, 0, 3, 65581, 0, 3, 131117, 0, 3, 196653, 0, 3, 262189, 0, 3, 327725, 0, 3, 65583, 0, 3, 131119, 0, 3, 196655, 0, 3, 262191, 0, 3, 327727, 0, 3, 327728, 0, 3, 327729, 0, 3, 262193, 0, 3, 196657, 0, 3, 131121, 0, 3, 65585, 0, 3, 65587, 0, 3, 131123, 0, 3, 196659, 0, 3, 262195, 0, 3, 327731, 0, 3, 65588, 0, 3, 65589, 0, 3, 131125, 0, 3, 196660, 0, 3, 327733, 0, 3, 262196, 0, 3, 196661, 0, 3, 65591, 0, 3, 65592, 0, 3, 65593, 0, 3, 131128, 0, 3, 196664, 0, 3, 262200, 0, 3, 327736, 0, 3, 65596, 0, 3, 65595, 0, 3, 65597, 0, 3, 131131, 0, 3, 196667, 0, 3, 196668, 0, 3, 196669, 0, 3, 262205, 0, 3, 327741, 0, 3, 327740, 0, 3, 327739, 0, 3, 458783, 0, 0, 524319, 0, 0, 589855, 0, 0, 655391, 0, 0, 720927, 0, 0, 655392, 0, 0, 589856, 0, 0, 589857, 0, 0, 655393, 0, 0, 524321, 0, 0, 458785, 0, 0, 720929, 0, 0, 720928, 0, 0, 458787, 0, 0, 524323, 0, 0, 589859, 0, 0, 655395, 0, 0, 720931, 0, 0, 589860, 0, 0, 458789, 0, 0, 524325, 0, 0, 589861, 0, 0, 655397, 0, 0, 720933, 0, 0, 458791, 0, 0, 524327, 0, 0, 589863, 0, 0, 655399, 0, 0, 720935, 0, 0, 720936, 0, 0, 720937, 0, 0, 589864, 0, 0, 458792, 0, 0, 458793, 0, 0, 524331, 0, 0, 589867, 0, 0, 655403, 0, 0, 720939, 0, 0, 589869, 0, 0, 655405, 0, 0, 720941, 0, 0, 524333, 0, 0, 458795, 0, 0, 458796, 0, 0, 458797, 0, 0, 458803, 0, 3, 458804, 0, 3, 458805, 0, 3, 524340, 0, 3, 589876, 0, 3, 655412, 0, 3, 720948, 0, 3, 720947, 0, 3, 720949, 0, 3, 458811, 0, 0, 524347, 0, 0, 589883, 0, 0, 655419, 0, 0, 720955, 0, 0, 458812, 0, 0, 458813, 0, 0, 524349, 0, 0, 589885, 0, 0, 589884, 0, 0)
layer_1/name = "Walls"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 0
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(655378, 2, 1, 655361, 65538, 1, 262172, 65538, 1, 65545, 2, 1, 917505, 65538, 0, 983041, 196610, 0, 983040, 196610, 0, 786432, 262146, 0, 524316, 1, 0, 524317, 327682, 0, 393245, 327682, 0, 458781, 131074, 0, 655388, 2, 0, 655389, 458754, 0, 720925, 327682, 0, 589851, 262146, 0, 4, 65537, 0, 5, 327682, 0, 8, 2, 0, 65542, 2, 0, 65541, 65538, 0, 655372, 65538, 1, 393232, 2, 1, 458763, 2, 1, 720911, 2, 1)
layer_2/name = "Stairs"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()

[node name="Logo" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_y05xk")
position = Vector2(240, 52)
sprite_frames = SubResource("SpriteFrames_078qx")
autoplay = "default"
frame_progress = 0.314219

[node name="Sprite2D" type="Sprite2D" parent="Logo"]
position = Vector2(117, 19)
texture = ExtResource("5_a3ujg")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(210, 124)

[node name="Play" type="Button" parent="Node2D"]
offset_right = 61.0
offset_bottom = 10.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.929412, 0.4, 1)
theme_override_colors/font_hover_color = Color(1, 0.929412, 0.4, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.929412, 0.4, 1)
theme_override_fonts/font = ExtResource("3_kl6pf")
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxEmpty_flx6v")
theme_override_styles/hover = SubResource("StyleBoxEmpty_j5f2i")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_pqiwe")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vaaa5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_se3oe")
text = "Play World"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Node2D/Play"]
show_behind_parent = true
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 62.0
offset_bottom = 14.0
theme_override_colors/font_color = Color(0, 0, 0, 0.498039)
theme_override_fonts/font = ExtResource("3_kl6pf")
theme_override_font_sizes/font_size = 10
text = "Play World
"
metadata/_edit_use_anchors_ = true

[node name="Seed" type="LineEdit" parent="Node2D"]
offset_left = -22.0
offset_top = 16.0
offset_right = 83.0
offset_bottom = 41.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 0.929412, 0.4, 1)
theme_override_colors/selection_color = Color(0.219608, 0.329412, 0.803922, 1)
theme_override_fonts/font = ExtResource("3_kl6pf")
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_ux6d7")
theme_override_styles/focus = SubResource("StyleBoxFlat_ux6d7")
theme_override_styles/read_only = SubResource("StyleBoxFlat_ux6d7")
placeholder_text = "Random Seed"
alignment = 1
caret_blink = true
caret_blink_interval = 0.5
metadata/_edit_use_anchors_ = true

[node name="Quit" type="Button" parent="Node2D"]
offset_top = 46.0
offset_right = 60.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.929412, 0.4, 1)
theme_override_colors/font_hover_color = Color(1, 0.929412, 0.4, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.929412, 0.4, 1)
theme_override_fonts/font = ExtResource("3_kl6pf")
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxEmpty_xdiry")
theme_override_styles/hover = SubResource("StyleBoxEmpty_jndn3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_047b6")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1epdt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4vjks")
text = "Quit Game"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Node2D/Quit"]
show_behind_parent = true
layout_mode = 0
offset_left = 4.0
offset_top = 1.0
offset_right = 58.0
offset_bottom = 14.0
theme_override_colors/font_color = Color(0, 0, 0, 0.498039)
theme_override_fonts/font = ExtResource("3_kl6pf")
theme_override_font_sizes/font_size = 10
text = "Quit Game"
metadata/_edit_use_anchors_ = true

[node name="ClickSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_xew1m")
pitch_scale = 1.5

[connection signal="pressed" from="Node2D/Play" to="." method="play_button_pressed"]
[connection signal="text_submitted" from="Node2D/Seed" to="." method="seed_text_submitted"]
[connection signal="pressed" from="Node2D/Quit" to="." method="quit_pressed"]
